tests/ui/type-alias-impl-trait/drop-analysis-on-unconstrained-tait.stderr
error: unconstrained opaque type
  --> $DIR/drop-analysis-on-unconstrained-tait.rs:7:28
   |
LL |     pub type OpaqueBlock = impl Trait;
   |                            ^^^^^^^^^^
   |
   = note: `OpaqueBlock` must be used in combination with a concrete type within the same module

error: aborting due to 1 previous error

